[package]
name = "api_call"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
openai = "1.0.0"
dotenv = "0.15.0"
base64 = "0.22.1"
